--- a/build.gradle
+++ b/build.gradle
@@ -16,12 +16,12 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	runtimeOnly 'com.h2database:h2'
 	testImplementation 'org.awaitility:awaitility:3.1.2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation group: 'org.springframework.restdocs', name: 'spring-restdocs-mockmvc', version: '2.0.5.RELEASE'
 	testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.8.0'
-
 }
 
 test {
