--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.servlet.multipart.max-file-size=128KB
 spring.servlet.multipart.max-request-size=128KB
+
+spring.data.mongodb.database=demo
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=localhost
