--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.servlet.multipart.max-request-size=128KB
 spring.data.mongodb.database=demo
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
+
+spring.ldap.embedded.ldif=src/main/resources/test-server.ldif
